GNOME Bugzilla – Bug 762842
vulkan: Fix GError memory leak
Last modified: 2016-02-29 07:52:45 UTC
Fix memory leaks.
Created attachment 322615 [details] [review] fix gerror memory leak
Created attachment 322616 [details] [review] trivial patch to remove duplicate assignment
Created attachment 322617 [details] [review] vkswapper/vkutils gerror memory leak. Found 2 other places where gerror is being leaked.. we can merge all these changes into one patch i guess.
commit 22d4e0a323eb423fd496ef7f0ee457818586cf3d Author: Vineeth TM <vineeth.tm@samsung.com> Date: Mon Feb 29 10:38:32 2016 +0900 vkswapper/vkutils: Fix gerror memory leak https://bugzilla.gnome.org/show_bug.cgi?id=762842 commit 25c2397c6cd8ae8973429ac007245d161260e826 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Mon Feb 29 10:37:11 2016 +0900 vkdevice: Fix duplicate assignment of queue variable https://bugzilla.gnome.org/show_bug.cgi?id=762842 commit 301263b7ecbd9d22958281f5e6af3d8fc4fb505a Author: Vineeth TM <vineeth.tm@samsung.com> Date: Mon Feb 29 10:33:45 2016 +0900 vksink: Fix GError memory leak https://bugzilla.gnome.org/show_bug.cgi?id=762842