vksink: Fix GError memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=762842